Fixed use of sun API